[package]
name = "ribbon"
version = "0.1.0"
authors = ["Hideyuki Teramura <hide4d51@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
panic-semihosting = "0.5.2"
embedded-hal = { version = "0.2.3", features = [ "unproven" ] }
stm32f1xx-hal = { version = "0.3.0", features = [ "rt", "stm32f103" ] }
shared-bus = { version = "0.1.4", features = [ "cortexm" ] }
embedded-graphics = "0.4.9"
sh1106 = "0.2.0"
infrared = "0.6.0"
arrayvec = { version = "0.5.1", default-features = false, features = [] }
